Fix to remove margin top from aside when aligned next to the first field when there's no legend.

--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -262,6 +262,12 @@ $field_width: 600px;
         display: flex;
     }
 
+    @include media-desktop() {
+        .mh-form__aside:first-child + & {
+            margin-top: 0;
+        }
+    }
+
     /**
      * Custom layouts
      * --
